@@ -1684,6 +1684,23 @@ Default is yes.
 </div></div>
 </dd>
 <dt class="hdlist1">
+dup_results_are_passive
+</dt>
+<dd>
+<p>
+Use this option to set if the duplicate result send to the <em>dupserver</em>
+will be passive or active.
+Default is yes (passive).
+</p>
+<div class="exampleblock">
+<div class="exampleblock-content">
+<div class="literalblock">
+<div class="content">
+<pre><tt>dup_results_are_passive=yes</tt></pre>
+</div></div>
+</div></div>
+</dd>
+<dt class="hdlist1">
 debug-result
 </dt>
 <dd>
@@ -2264,7 +2281,7 @@ Make sure all your worker have the Nagios-Plugins available under
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2012-03-14 22:48:36 CEST
+Last updated 2012-03-15 12:28:24 CEST
 </div>
 </div>
 </body>
