@@ -136,6 +136,11 @@ fork_on_exec=no
 # Default: yes
 show_error_output=yes
 
+# Use dup_results_are_passive to set if the duplicate result send to the dupserver
+# will be passive or active.
+# Default is yes (passive).
+#dup_results_are_passive=yes
+
 # When embedded perl has been compiled in, you can use this
 # switch to enable or disable the embedded perl interpreter.
 enable_embedded_perl=on
